--- a/templates/index.html
+++ b/templates/index.html
@@ -8,26 +8,98 @@
 
 </head>
 <body>
-    <div id="bar" style="width:1000px; height:600px;"></div>
-    <script>
-        var chart = echarts.init(document.getElementById('bar'), 'white', {renderer: 'canvas'});
-
-        $(
-            function () {
-                getData(chart);
-            }
-        );
-
-        function getData() {
-            $.ajax({
-                type: "GET",
-                url: "http://127.0.0.1:8000/StudentInfo/cat_sum_cnt",
-                dataType: 'json',
-                success: function (result) {
-                    chart.setOption(result.data);
-                }
-            });
+<div id="bar" style="width:1000px; height:600px;"></div>
+<script>
+    var myChart = echarts.init(document.getElementById('bar'), 'white', {renderer: 'canvas'});
+    var numlist;
+    $(
+        function () {
+            dd = getData();
         }
-    </script>
+    );
+
+    function getData() {
+        var dd;
+        $.ajax({
+            type: "GET",
+            url: "http://127.0.0.1:8000/StudentInfo/cat_sum_cnt",
+            dataType: 'json',
+            success: function (result) {
+                dd = result.data;
+                console.log(dd);
+                da1 = [];
+                for (var i = 0; i <= dd.length - 1; i++) {
+                    if (i == 0 || i == 5) {
+                        da1[i] = 0
+                    } else {
+                        da1[i] = da1[i - 1] + dd[i - 1]
+                    }
+                }
+                da1;
+                var option = {
+                    title: {
+                        text: '学生个人卡牌信息',
+                    },
+                    tooltip: {
+                        trigger: 'axis',
+                        axisPointer: {
+                            type: 'shadow'
+                        },
+                        formatter: function (params) {
+                            var tar = params[1];
+                            return tar.name + '<br/>' + tar.seriesName + ' : ' + tar.value;
+                        }
+                    },
+                    grid: {
+                        left: '3%',
+                        right: '4%',
+                        bottom: '3%',
+                        containLabel: true
+                    },
+                    xAxis: {
+                        type: 'category',
+                        splitLine: {show: false},
+                        data: ['知识获取', '实践能力', '思维能力', '个体', '社会', '卡牌总数']
+                    },
+                    yAxis: {
+                        type: 'value'
+                    },
+                    series: [
+                        {
+                            name: '辅助',
+                            type: 'bar',
+                            stack: '总数',
+                            itemStyle: {
+                                normal: {
+                                    barBorderColor: 'rgba(0,0,0,0)',
+                                    color: 'rgba(0,0,0,0)'
+                                },
+                                emphasis: {
+                                    barBorderColor: 'rgba(0,0,0,0)',
+                                    color: 'rgba(0,0,0,0)'
+                                }
+                            },
+                            data: da1
+                        },
+                        {
+                            name: '卡牌数',
+                            type: 'bar',
+                            stack: '总数',
+                            label: {
+                                normal: {
+                                    show: true,
+                                    position: 'inside'
+                                }
+                            },
+                            data: dd
+                        }
+                    ]
+                };
+                myChart.setOption(option);
+
+            }
+        });
+    }
+</script>
 </body>
 </html>
