--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>一切的一切将从这里开始</title>
+    <title>学生信息展示页面</title>
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
 
@@ -11,7 +11,6 @@
 <div id="bar" style="width:1000px; height:600px;"></div>
 <script>
     var myChart = echarts.init(document.getElementById('bar'), 'white', {renderer: 'canvas'});
-    var numlist;
     $(
         function () {
             dd = getData();
