cmmit again for test

--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>666</title>
 </head>
 <body>
-$END$
+<p>This is a paragrah!!</p>
+
 </body>
 </html>
